[project]
name = "print-utils"
version = "0.0.1.dev2"
description = "Utility functions for formatted console printing used across the project."
readme = "README.md"
requires-python = ">=3.10"
authors = [
   {name = "Anton Shiryaev", email = "med.phisiker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["print_utils"]

[project.urls]
Repository = "https://github.com/VLMHyperBenchTeam/print_utils"
Homepage = "https://github.com/VLMHyperBenchTeam" 
