[project]
name = "print-utils"
version = "0.0.1"
description = "Utility functions for formatted console printing used across the project."
readme = "README.md"
requires-python = ">=3.10"
authors = [
   {name = "Anton Shiryaev", email = "med.phisiker@gmail.com"}
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/VLMHyperBenchTeam/print_utils"
Homepage = "https://github.com/VLMHyperBenchTeam" 
